# chatapp

./: package-lock.json  package.json
src/: App.vue  main.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: config.default.yml
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src/assets/: styles.css
src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
src/store/: index.js
src/views/: Chat.vue  Login.vue  Register.vue
